crates/store/src/snapshots/switchyard_store__snippets__tests__builtins_postgres.snap
---
source: crates/store/src/snippets.rs
expression: rendered
---
-- Select rows (sel) [builtin:postgres:sel]
SELECT ${2:*}
FROM ${1:table_name}
LIMIT ${3:100};

-- Insert row (ins) [builtin:postgres:ins]
INSERT INTO ${1:table_name} (${2:column1}, ${3:column2})
VALUES (${4:value1}, ${5:value2});

-- Update with WHERE (upd) [builtin:postgres:upd]
UPDATE ${1:table_name}
SET ${2:column1} = ${3:value1}
WHERE ${4:condition};

-- Common table expression (cte) [builtin:postgres:cte]
WITH ${1:cte_name} AS (
    SELECT ${2:*}
    FROM ${3:table_name}
)
SELECT *
FROM ${1:cte_name};

-- Create index (idx) [builtin:postgres:idx]
CREATE INDEX ${1:index_name}
    ON ${2:table_name} (${3:column1});

-- Transaction (tran) [builtin:postgres:tran]
BEGIN;

${1:-- statements}

COMMIT;
